--- a/en/index.html
+++ b/en/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PASSAT СС</title>
+  <title>NISSAN TERANO</title>
 </head>
 <body>
 
-  <h1>PASSAT CC V1</h1>
+  <h1>NISSAN TERANO V2</h1>
 
 </body>
 </html>
