--- a/ru/index.html
+++ b/ru/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ПАССАТ СС</title>
+  <title>НИССАН ТИРАНО</title>
 </head>
 <body>
 
-  <h1>ПАССАТ CC ВЕРСИЯ 1</h1>
+  <h1>НИССАН ТИРАНО ВЕРСИЯ 2</h1>
 
   <img src="ru\5491.webp">
 
